--- a/promise.html
+++ b/promise.html
@@ -10,17 +10,98 @@
 </body>
 </html>
 <script>
-    function aaa(timeout,msg) {
-        return new Promise((res,rej) => {
-            setTimeout(() => {
-                console.log(msg)
-                res()
-            }, timeout);
-        })
+//     function aaa(timeout,msg) {
+//         return new Promise((res,rej) => {
+//             setTimeout(() => {
+//                 console.log(msg)
+//                 res()
+//             }, timeout);
+//         })
+//     }
+//     aaa(1000,"111").then(res => {
+//         return aaa(2000,"222")
+//     }).then(res => {
+//         return aaa(3000,"333")
+//     })
+//     const getRequest = (url, params) => {
+//         return new Promise((resolve,reject) => {
+//             return instance.get(url, {params}).then(res => {
+//                 resolve(res)
+//             }).catch(err => handleError(err));
+//         })
+    
+// }
+// const postRequest = (url, params) => {
+//     return instance.post(url, params).then(res => handleSuccess(res)).catch(err => handleError(err));
+// }
+// let p1 = new Promise((resolve, reject) => {
+//   resolve('成功了')
+// })
+ 
+// let p2 = new Promise((resolve, reject) => {
+//   resolve('success')
+// })
+ 
+// let p3 = new Promise((resolve, reject) => {
+//     reject('false')
+// })
+ 
+// Promise.all([p1, p2]).then((result) => {
+//   console.log(result)               //['成功了', 'success']
+// }).catch((error) => {
+//   console.log(error)
+// })
+ 
+// Promise.all([p1,p3,p2]).then((result) => {
+//   console.log(result)
+// }).catch((error) => {
+//   console.log(error)      // 失败了，打出 '失败'
+// })
+// function getRandom() {
+
+// }
+// let promiseList = [];
+// let data1 = "";
+// let data2 = "";
+// promiseList.push(new Promise((resolve,reject) => {
+//     const obj = {
+//         code: 200,
+//         data: "data1"
+//     }
+//     data1 = obj.data;
+//     resolve(obj)
+//     setTimeout(() => {
+//         resolve(obj)
+//     }, 1000);
+// }))
+// promiseList.push(new Promise((resolve,reject) => {
+//     const obj = {
+//         code: 200,
+//         data: "data2"
+//     }
+//     data2 = obj.data;
+//     resolve(obj)
+//     setTimeout(() => {
+//         resolve(obj)
+//     }, 2000);
+// }))
+// Promise.all(promiseList).then(res => {
+//     console.log(res)
+//     console.log(data1,data2)
+// })
+function getArr(m,n) {
+    let arr = new Array(m)
+    setItem(0)
+    function setItem(index) {
+        // console.log(arr)
+        if(index === m) {
+        } else {
+            arr[index] = n
+            setItem(index+1)
+        }
     }
-    aaa(1000,"111").then(res => {
-        return aaa(2000,"222")
-    }).then(res => {
-        return aaa(3000,"333")
-    })
+    return arr;
+    
+}
+console.log(getArr(6,1))
 </script>
