--- a/table.html
+++ b/table.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <style>
+    html {
+        font-size: 100px;
+    }
+
     /* table 公共样式 */
-table,tr,td,th{
-    box-sizing: border-box;
-}
-table{
-   width:100%;
-    border-collapse: collapse;
-    font-size: .14rem;
-}
-th {
-    line-height: .4rem;
-    text-align: center;
-    padding-left: .1rem;
-    padding-right: .1rem;
-}
+    table,
+    tr,
+    td,
+    th {
+        box-sizing: border-box;
+    }
 
-thead>tr {
-    background: #f5f8fa;
-}
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: .14rem;
+    }
 
-th.duohang {
-    /* padding-top: .1rem; */
-    line-height: .2rem;
-}
+    th {
+        line-height: .4rem;
+        text-align: center;
+        padding-left: .1rem;
+        padding-right: .1rem;
+    }
 
-td {
-    line-height: .5rem;
-    text-align: center;
-}
+    thead>tr {
+        background: #f5f8fa;
+    }
 
-td.duohang {
-    padding-top: .1rem;
-    line-height: .2rem;
-    text-align: left;
-    text-indent: 2em;
-}
+    th.duohang {
+        /* padding-top: .1rem; */
+        line-height: .2rem;
+    }
 
-tbody>tr {
-    border: .01rem solid #eee;
-}
+    td {
+        line-height: .5rem;
+        text-align: center;
+    }
 
-tbody>tr:hover {
-    background: #f5f8fa;
+    td.duohang {
+        padding-top: .1rem;
+        line-height: .2rem;
+        text-align: left;
+        text-indent: 2em;
+    }
 
-}
+    tbody>tr {
+        border: .01rem solid #eee;
+    }
+
+    tbody>tr:hover {
+        background: #f5f8fa;
+
+    }
 </style>
+
 <body>
+    <button onclick="handleSetData()">setData</button>
+    <button onclick="handleAdd(12)">addOne</button>
     <table>
         <thead>
             <tr>
                 <th>name</th>
                 <th>age</th>
                 <th>sex</th>
+                <th>操作</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="tbody">
             <tr>
                 <td>zhangsan</td>
                 <td>11</td>
@@ -70,4 +84,59 @@ tbody>tr:hover {
         </tbody>
     </table>
 </body>
+
 </html>
+<script>
+    function getRandom() {
+        return parseInt(Math.random()*1000000000)
+    }
+    let data = [
+        {name: "zs1",age: 11, sex: "nan"},
+        {name: "zs2",age: 12, sex: "nan"},
+        {name: "zs3",age: 13, sex: "nan"},
+    ]
+    const tbody = document.querySelector("#tbody");
+    function handleSetData() {
+        tbody.innerHTML = data.map((item,index) => {
+            return `<tr>
+                        <td>${item.name}</td>
+                        <td>${item.age}</td>
+                        <td>${item.sex}</td>
+                        <th>
+                            <button onclick="handleDel(${index})">addOne</button>
+                        </th>
+                    </tr>`
+        }).join("")
+    }
+    function handleAdd(v) {
+        data.push({name: "zs"+getRandom(),age: 13, sex: "nan"})
+        handleSetData();
+    }
+    function handleDel(index) {
+        data.splice(index,1);
+        handleSetData();
+    }
+    function setfontsize() {
+        var deviceWidth = document.documentElement.clientWidth;
+        var html = document.querySelector('html')
+        // 安全尺寸1200-1920；1920 下1rem 为 100px;
+        if (deviceWidth < 1200) {
+            html.style.fontSize = (1200 / 1920 * 100) + 'px';
+            document.body.style.width = '19.2rem';
+
+        } else if (deviceWidth > 1920) {
+            html.style.fontSize = 100 + 'px'
+            document.body.style.width = '19.2rem';
+            document.body.style.margin = '0 auto'
+
+        } else {
+            html.style.fontSize = (deviceWidth / 1920 * 100) + 'px'
+        }
+        document.body.style.fontSize = '.16rem';
+
+    }
+    setfontsize();
+    window.onresize = function () {
+        setfontsize();
+    }
+</script>
