--- a/css/布局.html
+++ b/css/布局.html
@@ -22,6 +22,7 @@
     }
     .son {
         height: 60px;
+        width: 100px;
         background-color: pink;
     }
 </style>
@@ -29,29 +30,8 @@
     <div class="content">
         aaa
         <div class="son">
-            aon
+            sf森岛帆高告诉对方过后第三方好多活是个
         </div>
-        <!-- <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div> -->
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
-        <div class="aa">11</div><div class="aa">11</div><div class="aa">11</div>
     </div>
 </body>
 </html>
