--- a/js/shujujiegou.html
+++ b/js/shujujiegou.html
@@ -14,13 +14,13 @@
         {star: 2, rate: 50, count: 3, sum: 2, avgStar: 4},
         {star: 4, rate: 100, count: 2, sum: 2, avgStar: 4}
     ]
-    let arrEnd = [
-        {star: 1, rate: 0, count: 0, sum: 2, avgStar: 4},
-        {star: 2, rate: 0, count: 0, sum: 2, avgStar: 4},
-        {star: 3, rate: 0, count: 0, sum: 2, avgStar: 4},
-        {star: 4, rate: 100, count: 2, sum: 2, avgStar: 4},
-        {star: 5, rate: 0, count: 0, sum: 2, avgStar: 4}
-    ]
+    // let arrEnd = [
+    //     {star: 1, rate: 0, count: 0, sum: 2, avgStar: 4},
+    //     {star: 2, rate: 0, count: 0, sum: 2, avgStar: 4},
+    //     {star: 3, rate: 0, count: 0, sum: 2, avgStar: 4},
+    //     {star: 4, rate: 100, count: 2, sum: 2, avgStar: 4},
+    //     {star: 5, rate: 0, count: 0, sum: 2, avgStar: 4}
+    // ]
     let arrn = [
         {star: 1, rate: 0, count: 0, sum: 0, avgStar: 0},
         {star: 2, rate: 0, count: 0, sum: 0, avgStar: 0},
