--- a/js/字符串.html
+++ b/js/字符串.html
@@ -55,5 +55,13 @@
     // console.dir(s)
     // console.log("".constructor)
     // console.log(1.constructor)
+    function aaa() {
+        console.log(arguments)
+
+    }
+    aaa(1,2,3)
+    const bbb = [5,6,7,8]
+    console.log(bbb.slice(1,3));
+    console.log(bbb)
 </script>
 </html>
