--- a/js/字符串.html
+++ b/js/字符串.html
@@ -29,7 +29,7 @@
     // var regex = /[A-Z]/g;
     // var found = paragraph.match(/x/);
     // console.log(found);
-    var str = 'ab cd ef gh ab';
+    // var str = 'ab cd ef gh ab';
     // var re = /see (chapter \d+(\.\d)*)/i;
     // var found = str.match(re);
     // console.log(found);
@@ -38,30 +38,33 @@
     // str   =   str.replace(/\s+/g,"");   
     // console.log(str);  
     // console.log(str.replace(" ",""))
-    const str1 = "0.sadfsdf。1.HR专业功底弱，各大模块都懂一些，但都不精。2.目前是在金融行业做事，但想向互联网行业发展。从业背景被限制,发电工。3.只发生过argue断更"
-    const arr = str1.split(/\d/)
+    // const str1 = "0.sadfsdf。1.HR专业功底弱，各大模块都懂一些，但都不精。2.目前是在金融行业做事，但想向互联网行业发展。从业背景被限制,发电工。3.只发生过argue断更"
+    // const arr = str1.split(/\d/)
     // console.log(arr)
-    const arr1 = arr.map(item => item.slice(1)).filter(i => i!=="")
+    // const arr1 = arr.map(item => item.slice(1)).filter(i => i!=="")
     // console.log(arr1)
     // const s = "s";
-    const f = function() {
+    // const f = function() {
 
-    }
-    const b = new f();
+    // }
+    // const b = new f();
     // console.dir(f);
     // console.log(f.prototype.constructor);
-    console.log(new Number(5).constructor)
+    // console.log(new Number(5).constructor)
     // console.log(Object.prototype.toString(b))
     // console.dir(s)
     // console.log("".constructor)
     // console.log(1.constructor)
-    function aaa() {
-        console.log(arguments)
+    // function aaa() {
+    //     console.log(arguments)
 
-    }
-    aaa(1,2,3)
-    const bbb = [5,6,7,8]
-    console.log(bbb.slice(1,3));
-    console.log(bbb)
+    // }
+    // aaa(1,2,3)
+    // const bbb = [5,6,7,8]
+    // console.log(bbb.slice(1,3));
+    // console.log(bbb)
+    var str = "aa bb cc   dd     ee";
+    let arr = str.split(/\s+/);
+    console.log(arr)
 </script>
 </html>
