--- a/js/str.html
+++ b/js/str.html
@@ -41,8 +41,16 @@
     // (.*?) ["{{msg}}", "msg", 0, "{{msg}}哈哈哈{{age}}"] ["{{age}}", "age", 10, "{{msg}}哈哈哈{{age}}"]
     const ns = str.replace(/\{\{(.*?)\}\}/g, (...args) => {
         console.log(args)
-        // return "jjjj"
+        return data[args[1]]
     })
-
+//     let aaaa = `"你好王宁同学，欢迎参加职业规划训练营，我是coe私塾教练李霞熙，基于提供的个人规划与简历信息，以下是职业发展建议： 【职业目标与人格匹配】 3-5年职业目标是HRM，作为人力资源负责人以主导组织变革、人力资源项目推进等工作为主，需要较强的成就动机和领袖特质，在人格特质上一般3号（成就型）和8号（领袖型）相对更匹配一些。 根据测评得分，人格特质为6号忠诚型、1号完美型、5号理智型、9号和平型。 6号忠诚型，较敏感易困惑，面对变化态度谨慎（这是迟迟未做出改变的重要原因），喜欢没有竞争压力的工作或希望在比较强大的领导下工作。1号完美型，细致、善于坚持、有耐心且愿意提供帮助。5号理智型，善于思考，有较强的理论和逻辑性，适合高专业、教练类、某领域专家类工作。8号和平型，性格和善、和事佬，工作中能够沉下心来思考问题，不适合变动和创新的工作。 从职业目标HRM发展的角度来看，建议可以有意识地通过工作环境、生活环境等进行自我训练，向3号和8号人格上可以有一定的迁善，这样更能匹配HRM的职业目标。另外人力资源部专业教练/讲师，企业COE也是一个不错的职业发展方向。 【专业水平发展】 在专业水平得分上，除了SSC之外，其他的模块分数都不是很理想，无论是做一个HRM还是教练、COE，均需要核心专业模块必须要精通，要打通人力资源，就需要搞清楚人力资源各模块中包含哪些专业内容以及模块内的逻辑关系、人力资源各模块相互之间的逻辑关系、以及人力资源与运营之间的逻辑关系。对于HRM而言，需要全模块精通，特别是绩效变革、组织职务、人才盘点、薪酬激励和干部管理，这些模块即是重点也是难点，从简历上得知过往的工作在这几个模块涉足相对较少，建议需在短时间内快速突破以上专业能力。 【综合建议】 情商得分处于较好水平，这跟人格特质有一定关系，结合上述人格匹配分析、专业能力分析、履历背景，建议如下： 1、 在专业能力上快速突破，尽量摆脱基础人事类工作，这些工作重复性高、可替代性强、价值较低，要聚焦于做更多有价值的事情。 2、 行业经验、公司平台和职务需要用心经营，从之前的从业经历来看，在行业和职务的选择上需要慎重考虑，建议可以选择性地考虑一些行业/公司/职务，可以从市场容量、未来趋势、竞争环境等方面考虑行业因素，可以从老板、产品、公司规模、核心团队、文化等方面考虑公司/平台，可以从职业目标匹配、职位等级、工作内容等方面考虑职务。 3、要快速突破职务上的成长。"`
+//     const arr = aaaa.split(/【.*?】/g);//"你好王宁同学，欢迎参加职业规划训练营，我是coe私塾教练李霞熙，基于提供的个人规划与简历信息，以下是职业发展建议： "" 情商得分处于较好水平，这跟人格特质有一定关系，结合上述人格匹配分析、专业能力分析、履历背景，建议如下： 1、 在专业能力上快速突破，尽量摆脱基础人事类工作，这些工作重复性高、可替代性强、价值较低，要聚焦于做更多有价值的事情。 2、 行业经验、公司平台和职务需要用心经营，从之前的从业经历来看，在行业和职务的选择上需要慎重考虑，建议可以选择性地考虑一些行业/公司/职务，可以从市场容量、未来趋势、竞争环境等方面考虑行业因素，可以从老板、产品、公司规模、核心团队、文化等方面考虑公司/平台，可以从职业目标匹配、职位等级、工作内容等方面考虑职务。 3、要快速突破职务上的成长。"
+//     console.log(arr)
+//     let arrn = aaaa.match(/【(.*?)】/g).map(item => item.substring(1,item.length-1));
+//     let obj = arrn.reduce((pre,cu,index) => {
+//         pre[cu] = arr[index+1];
+//         return pre;
+//     },{})
+//     console.log(obj)
 console.log(ns);
 </script>
