--- a/promise/async.html
+++ b/promise/async.html
@@ -10,22 +10,55 @@
 </body>
 </html>
 <script>
-    function guss() {
-        return new Promise((resolve,reject) => {
-            const random = parseInt(Math.random()*1000);
-            setTimeout(() => {
-                resolve(random)
-            },2000)
-        })
-    }
+    // function mi() {
+    //     return new Promise((res,rej) => {
+    //         setTimeout(() => {
+    //             res("bbb")
+    //         },2000)
+    //     })
+    // }
+    // function guss() {
+    //     return new Promise((resolve,reject) => {
+    //         const random = parseInt(Math.random()*1000);
+    //         setTimeout(async () => {
+    //             resolve(await mi())
+    //         },2000)
+    //     })
+    // }
+    // guss().then(res => {
+    //     console.log(res)
+    // })
     // 普通的
-    guss().then(res => {
-        console.log(res)
-    })
-    // async
-    async function test() {
-        const result = await guss();
-        console.log(result)
+    // guss().then(res => {
+    //     console.log(res)
+    // })
+    // // async
+    // async function test() {
+    //     const result = await guss();
+    //     console.log(result)
+    // }
+    // test()
+    function am() {
+        // return new Promise((res,rej) => {
+        //     if(!true) {
+        //         res({code: 200, msg: "success"})
+        //     } else {
+        //         rej({code: 500, msg: "failed"})
+        //     }
+        // })
+        if(true) {
+            return Promise.resolve({code: 2000, msg: "success"})
+        } else {
+            return Promise.reject({code: 5000, msg: "failed"})
+        }
     }
-    test()
+    async function getResult() {
+        try {
+            const res = await am();
+            console.log(res)
+        } catch (err) {
+            console.log("err",err)
+        }
+    }
+    getResult();
 </script>
