--- a/css/ali.html
+++ b/css/ali.html
@@ -21,82 +21,65 @@
     .titleImg {
         width: 64px;
         height: 64px;
-        background-image: url("https://img.alicdn.com/tfs/TB1qolSVhz1gK0jSZSgXXavwpXa-128-2688.png");
+        background-image: url("https://img.alicdn.com/tfs/TB1gnuZiipE_u4jSZKbXXbCUVXa-128-2688.png");
         background-repeat: no-repeat;
         background-position: 0 0;
         background-size: 100%;
         /* background-position-y: 0; */
     }
-    @keyframes donghua {
-        0% {
-            background-position-y: 0;
-        }
-        5% {
-            background-position-y: -64px;
-        }
-        10% {
-            background-position-y: -128px;
-        }
-        15% {
-            background-position-y: -192px;
-        }
-        20% {
-            background-position-y: -256px;
-        }
-        25% {
-            background-position-y: -320px;
-        }
-        30% {
-            background-position-y: -384px;
-        }
-        35% {
-            background-position-y: -448px;
-        }
-        40% {
-            background-position-y: -512px;
-        }
-        45% {
-            background-position-y: -576px;
-        }
-        50% {
-            background-position-y: -640px;
-        }
-        55% {
-            background-position-y: -704px;
-        }
-        60% {
-            background-position-y: -768px;
-        }
-        65% {
-            background-position-y: -832px;
-        }
-        70% {
-            background-position-y: -896px;
-        }
-        75% {
-            background-position-y: -960px;
-        }
-        80% {
-            background-position-y: -1024px;
-        }
-        85% {
-            background-position-y: -1088px;
-        }
-        90% {
-            background-position-y: -1152px;
-        }
-        95% {
-            background-position-y: -1216px;
-        }
-        100% {
-            background-position-y: -1280px;
-        }
+    .mmcontent {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .mmcitem {
+        width: 50%;
+        height: 210px;
+        position: relative;
+        overflow: hidden;
+    }
+    .bgi {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        background-image: url("https://img.alicdn.com/tfs/TB162Koj6MZ7e4jSZFOXXX7epXa-1440-424.png");
+        background-repeat: no-repeat;
+        background-position: 0 0;
+        background-size: 100%;
+        opacity: 0;
+        transform: scale(1.06);
+        transition: all .5s;
+    }
+    .bgi:hover {
+        opacity: 1;
+        transform: scale(1);
+    }
+    .innertext {
+        position: relative;
     }
 </style>
 <body>
     <div class="mcontent">
         <div class="titleImg"></div>
         <span>热门产品</span>
+    </div>
+    <div class="mmcontent">
+        <div class="mmcitem">
+            <div class="bgi"></div>
+            <div class="innertext">aaa</div>
+        </div>
+        <div class="mmcitem">
+            <div class="bgi"></div>
+            <div class="innertext">bbb</div>
+        </div>
+        <div class="mmcitem">
+            <div class="bgi"></div>
+            <div class="innertext">ccc</div>
+        </div>
+        <div class="mmcitem">
+            <div class="bgi"></div>
+            <div class="innertext">ddd</div>
+        </div>
     </div>
 </body>
 <script>
