--- a/算数/精度.html
+++ b/算数/精度.html
@@ -107,7 +107,7 @@
         } catch (f) { }
         return Number(d.replace(".", "")) * Number(e.replace(".", "")) / Math.pow(10, c);
     }
-    // console.log(floatMul(2.2,100))
+    console.log(floatMul("1.2","12"))
     /**
      * 解决两个数相除精度丢失问题
      * @param a
