--- a/jsti/shuangzhizhen.html
+++ b/jsti/shuangzhizhen.html
@@ -126,6 +126,77 @@
 
 // 输入：nums = [7,7,7,7,7,7,7]
 // 输出：1
-let dp = [0,1]
+// let dp = [0,1]
+
+// 输入：nums = [1,3,4,2,2]
+// 输出：2
+
+// 输入：nums = [3,1,3,4,2]
+// 输出：3
+
+// 2 <= n <= 3 * 104
+// nums.length == n + 1
+// 1 <= nums[i] <= n
+// nums 中 只有一个整数 出现 两次或多次 ，其余整数均只出现 一次
+// var findDuplicate = function(nums) {
+//     let obj = {};
+//     for(let i = 0; i < nums.length; i++) {
+//         if(obj[nums[i]]) {
+//             return nums[i]
+//         } else {
+//             obj[nums[i]] = 1
+//         }
+//     }
+// };
+// console.log(findDuplicate([7,9,7,4,2,8,7,7,1,5]))
+// [1,2,4,5,7,7,7,7,8,9]
+
+// 输入：s = "ca"
+// 输出：2
+// 解释：你没法删除任何一个字符，所以字符串长度仍然保持不变。
+// 示例 2：
+
+// 输入：s = "cabaabac"
+// 输出：0
+// 解释：最优操作序列为：
+// - 选择前缀 "c" 和后缀 "c" 并删除它们，得到 s = "abaaba" 。
+// - 选择前缀 "a" 和后缀 "a" 并删除它们，得到 s = "baab" 。
+// - 选择前缀 "b" 和后缀 "b" 并删除它们，得到 s = "aa" 。
+// - 选择前缀 "a" 和后缀 "a" 并删除它们，得到 s = "" 。
+// 示例 3：
+
+// 输入：s = "aabccabba"
+// 输出：3
+// 解释：最优操作序列为：
+// - 选择前缀 "aa" 和后缀 "a" 并删除它们，得到 s = "bccabb" 。
+// - 选择前缀 "b" 和后缀 "bb" 并删除它们，得到 s = "cca" 。
+/**
+ * @param {string} s
+ * @return {number}
+ */
+ var minimumLength = function(s) {
+    let arr = s.split("");
+    let left = 0;
+    let right = arr.length-1;
+    let value = "";
+    while(left < right) {
+        if(arr[left] === arr[right]) {
+            value = arr[left]
+            left++;
+            right--;            
+        } else {
+            if(arr[left] === value) {
+                left++;
+            } else if(arr[right] === value) {
+                right--;
+            } else {
+                break;
+            }            
+        }
+    }
+    console.log(right,left)
+    // return right-left+1 === -1 ? 0 : right-left+1
+};
+console.log(minimumLength("abbbbbbbbbbbbcabbbbbbba"))
 </script>
 </html>
