--- a/css/table固定表头.html
+++ b/css/table固定表头.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <style>
-    div{
+    .mmmmdiv{
       /* overflow:auto; */
       overflow-y: scroll;
       overflow-x: hidden;
@@ -70,7 +70,7 @@
   </style>
 
 <body>
-<div>
+<div class="mmmmdiv">
   <table cellspacing="0" border="0" cellpadding="0">
     <thead>
     <tr>
