--- a/css/height.html
+++ b/css/height.html
@@ -11,14 +11,34 @@
         margin: 0;
         box-sizing: border-box;
     }
-    .box {
+    html {
         height: 100%;
-        background-color: #ccc;
+    }
+    body {
+        height: 100%;
+    }
+    .div1 {
+        color: #fff;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .div2 {
+
     }
 </style>
 <body>
-    <div class="box">
-        aaa
+    <div class="div1" style="height:100%;background-color:blueviolet;">
+        <div class="div2">
+            div2
+        </div>
+        <div class="div2">
+            div2
+        </div>
+        <div class="div2">
+            div2
+        </div>
     </div>
 </body>
 </html>
